# UParlor

./: .gitignore  ARCHITECTURE.md  README.md  debug.py  test_script.py
Client/: install.py  pyproject.toml  upload.py
Client/client/: _cjk_patch.py  app.py  commands.py  config.py  ime.py  messages.py  msg_dispatch.py  network.py  registry.py  screen.py  screen_modes.py  screen_nav.py  screen_overlay.py  state.py  storage.py  theme.tcss  vim_mode.py
Client/client/ai/: __init__.py  attention.py  character.py  cognitive.py  config.py  impression.py  memory.py  mood.py  persona.py  provider.py  service.py  social.py  social_config.json
Client/client/data/: __init__.py  ui.json
Client/client/games/: __init__.py  mahjong_handler.py  mahjong_renderer.py  wordle_handler.py  wordle_renderer.py  world_handler.py  world_renderer.py
Client/client/net/: __init__.py  connection.py  dispatch.py  messages.py
Client/client/panels/: __init__.py  _ai_chat_render.py  _ai_chat_views.py  _card_render.py  _status_render.py  ai_chat.py  chat.py  command.py  game_board.py  inventory.py  login.py  notification.py  online.py  status.py  which_key.py
Client/client/protocol/: __init__.py  commands.py  handler.py  renderer.py
Client/scripts/: install.py  upload.py
Server/: pyproject.toml  run.sh  server.py  stop.sh
Server/games/: __init__.py
Server/server/: __init__.py  __main__.py  auth.py  base_room_handler.py  chat_log.py  chat_server.py  command_registry.py  commands.json  config.py  confirmation.py  game_protocol.py  item_system.py  items.json  lobby_engine.py  lobby_help.py  maintenance.py  msg_types.py  player_manager.py  profile_commands.py  rank_system.py  ranks.json  result_dispatcher.py  title_commands.py  title_system.py  titles.json  user_schema.py
Server/tests/: conftest.py  test_attributes.py  test_equipment.py  test_hand_eval.py  test_items.py  test_leveling.py  test_patterns.py  test_tiles.py
(+391 files in other folders)
