[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uparlor"
version = "0.1.4"
description = "UParlor Рђћ у╗ѕуФ»ТИИТѕЈтјЁ TUI т«бТѕиуФ»"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "textual>=0.40",
    "google-genai>=1.0",
]

[project.scripts]
uparlor = "client.app:main"

[tool.setuptools.packages.find]
include = ["client*"]

[tool.setuptools.package-data]
client = ["*.tcss", "**/*.json"]
