[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uparlor-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "werkzeug",
    "english-words",
]

[project.scripts]
uparlor-server = "server:main"

[tool.setuptools.packages.find]
include = ["server*"]
