[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uparlor-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "werkzeug",
    "english-words",
    "mahjong",
    "python-chess",
]

[project.scripts]
uparlor-server = "server:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.setuptools.package-data]
server = ["**/*.json", "**/*.txt"]
